added buttons, trying to reseed and see how that looks

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -13,7 +13,8 @@
         <div>
           <%= image_tag post.image, height: 400, width: 400 unless post.image.blank?  %>
           <br>
-          <%= post.link %>
+          <center><a href = <%= post.link %> class="btn btn-info"> Learn more about the artist... </a>
+
           <br> <br>
 
 
