user and session flow is almost finished, need to fix some redirects

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="m-x-auto newuser" style="width: 400px;">
 <%= form_for @user do |f| %>
   <div>
-    <span class="label label-default"></span><%= f.text_field :name, placeholder: "Full Name" %>
+    <span class="label label-default"></span><%= f.text_field :full_name, placeholder: "Full Name" %>
   </div>
   <br>
   <div>
