--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,26 @@
-<div class="m-x-auto newuser" style="width: 400px;">
-<%= form_for @user do |f| %>
-  <div>
-    <span class="label label-default"></span><%= f.text_field :full_name, placeholder: "Full Name" %>
+<center><div class="m-x-auto newuser" style="width: 400px;"><center>
+<div class="card">
+  <div class="card-block">
+    <h1> Create Profile </h1>
+    <%= form_for @user do |f| %>
+      <div>
+        <%= f.text_field :full_name, :class => "test", placeholder: "Full Name" %>
+      </div>
+      <br>
+      <div>
+        <%= f.text_field :current_city, :class => "test", placeholder: "Current City" %>
+      </div>
+      <br>
+      <div>
+        <%= f.text_field :email, :class => "test", placeholder: "Email" %>
+      </div>
+      <br>
+      <div>
+        <%= f.password_field :password, :class => "test", placeholder: "Password" %>
+      </div>
+      <br>
+      <%= f.submit "Sign Up" %>
+    <% end %>
+    </div>
   </div>
-  <br>
-  <div>
-    <span class="label label-default"></span><%= f.text_field :current_city, placeholder: "Current City" %>
-  </div>
-  <br>
-  <div>
-    <span class="label label-default"></span><%= f.text_field :email, placeholder: "Email" %>
-  </div>
-  <br>
-  <div>
-    <span class="label label-default"></span><%= f.password_field :password, placeholder: "Password" %>
-  </div>
-  <br>
-  <%= f.submit "Sign Up" %>
-<% end %>
 </div>
