--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,10 +1,11 @@
-
-    <center><h1>Instagram Lookup</h1></center>
+  <div id="document">
+    <center><img src="http://i.imgur.com/GmDPeAh.png" title="source: imgur.com" /></center>
+      <center><h4> Instagram acccount curated by @caspermugridge </h4>
       <% @posts.each do |post| %>
       <div class="col-sm-12 col-md-4">
         <div>
           <%= image_tag post.image, height: 400, width: 400 unless post.image.blank?  %>
-          <center><div id="tatbtns">
+          <div id="tatbtns">
             <a href=<%= post.link %> class="btn btn-info">Learn More  </a>
             <a href="#" class="btn btn-success">Favorite  </a>
           </div>
@@ -14,3 +15,4 @@
           </div>
         </div>
     <% end %>
+  </div>
