--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,14 @@
   <head>
     <title>BlackworkersApp</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
 
   <body>
+    <div id="navbar"></div>
+    <script src="navbar.jsx" type="text/jsx"></script>
 
 
     <%= yield %>
