db is fixed YESYESYEsYESYES. removed react for now

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,5 @@
-<h1> Artists</h1>
-<%= @artists each do |artist| %>
+<h1> Artistssss</h1>
+<% @artists.each do |artist| %>
     <div>
       <h3 class="artistLink"><%= link_to artist.instagram_handle %></h3>
     </div>
