DB is fully functional again, added nav bar and confirmed sessions works

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,19 +13,29 @@
     <a class="navbar-brand" href="#">Navbar</a>
     <ul class="nav navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <% if current_user %>
+      <li class="nav-item">
+        <a class="nav-link" <%= link_to "Profile", user_path(current_user)%></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" <%= link_to "Logout", logout_path %></a>
+      </li>
+      <% else %>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/new">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="/login">Login</a>
       </li>
+      <% end %>
+
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
         <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="/theidea">About the Idea</a>
+          <a class="dropdown-item" href="/artists">Artist Index</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
