--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
 <div>
+  <% if @user.id == current_user.id %>
 
-  <%= @user.full_name%>
+  <%= @user.full_name%>g
   <br>
   <br>
   Joined <%= @user.created_at.localtime.to_formatted_s(:long_ordinal) %>
   <% if @user == current_user %>
     <%= button_to "Edit Profile", edit_user_path, method: "get" %>
+  <% end %><abbr title=""></abbr>
   <% end %>
 
   <br>
