--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,10 +40,29 @@
 #document {
   background-color: black;
   font-style: Six Caps;
-
 }
+center {
+  padding: 20px 0 0 0;
+}
+  img{
+    -webkit-transition:all .5s ease;}
+    img:hover{
+      transform: scale(1.1)};
 
 html {
   background-color: black;
   font-style: Six Caps;
+}
+
+.nav-link {
+  margin-top: 20px;
+  padding: 0 20px 0 20px;
+}
+
+.form-inline {
+  margin-top: 20px;
+}
+
+nav {
+  padding: 0;
 }
