--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -6,9 +6,10 @@
       <div class="col-sm-12 col-md-4">
         <div>
           <%= image_tag post.image, height: 400, width: 400 unless post.image.blank?  %>
+          
           <div id="tatbtns">
             <a href=<%= post.link %> class="btn btn-info">Learn More  </a>
-            <a href="#" class="btn btn-success">Favorite  </a>
+            <a href="#" class="btn btn-success">Add to Favorites </a>
           </div>
 
           <br> <br>
