added white font styling, finished tweaking nav bar. need search now

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 
  h4 {
   font-family: $six-caps;
+  color: #D3D3D3;
 }
 
 #ideaContent, body {
@@ -65,4 +66,7 @@ html {
 
 nav {
   padding: 0;
+}
+p {
+  color: #D3D3D3;
 }
