rendered artist index

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,7 @@
-<h1> Artistssss</h1>
-<% @artists.each do |artist| %>
+<center><h1> Artistssss</h1>
+<% @posts.each do |post| %>
     <div>
-      <h3 class="artistLink"><%= link_to artist.instagram_handle %></h3>
+      <h3 class="artistLink"><%= link_to post.Instagram %></h3>
     </div>
   <br>
 <% end %>
