--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,13 @@
       </li>
     </ul>
     <form class="form-inline float-xs-right" name="search" action="/posts" method='get'>
-      <input class="search-input" type="text" placeholder="Search">
+      <input class="search-control" type="text" placeholder="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
+    <!-- <%= form_tag(posts_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search Posts" %>
+    <%= submit_tag "Search", :name => nil %>
+      <% end %> -->
   </nav>
 
 
