rolled back favorite model and reworked it, no dice

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -10,7 +10,12 @@
                 <div id="tatbtns">
                   <p> <%= post.Instagram %> </p>
                   <a href=<%= post.link %> class="btn btn-info">Learn More  </a>
-                   <button type="button" class="btn btn-success"><%= link_to 'Take a look', favorite_posts_path(post_id: post),  style: 'color:#FFFFFF', method: :post %></button>
+
+                  <% unless current_user.favorite_posts.exists?(id: @post.id) %>
+                   <button type="button" class="btn btn-success"><%= link_to 'Favorite', favorite_posts_path(post_id: @post),  style: 'color:#FFFFFF', method: :post %></button>
+                  <% else %>
+                   <button type="button" class="btn btn-danger"><%= link_to 'Delete', favorite_post_path(@post),  style: 'color:#FFFFFF', method: :delete %></button>
+
                     <!-- change 'take a look back to 'favorite' when model relationship is complete -->
                 </div>
               </div>
