Reference local `post` and not `@post`
The first error was caused by a reference to an instance variable that
was not defined, `@post`. What you wanted to reference instead was the
local variable that is defined in the each statement on line 21, `post`.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,11 +13,11 @@
             <p><%= post.Instagram %></p>
             <a href=<%= post.link %> class="btn btn-info">Learn More</a>
 
-            <% unless current_user.favorite_posts.exists?(id: @post.id) %>
+            <% unless current_user.favorite_posts.exists?(id: post.id) %>
               <button type="button" class="btn btn-success">
                 <%= link_to(
                   'Favorite',
-                  favorite_posts_path(@post),
+                  favorite_posts_path(post),
                   style: 'color:#FFFFFF',
                   method: :post,
                 ) %>
@@ -26,7 +26,7 @@
               <button type="button" class="btn btn-danger">
                 <%= link_to(
                   'Delete',
-                  favorite_post_path(@post),
+                  favorite_post_path(post),
                   style: 'color:#FFFFFF',
                   method: :delete
                 ) %>
